# RM_final_test

./: README.md
armor_detector/: CMakeLists.txt  package.xml
armor_detector/config/: path.json  transmit.json  video_config_2.json  video_config_4.json
armor_detector/src/: armor_detector_node.cpp
armor_detector/video/: output.avi  test1.avi
ballistic_calculator/: CMakeLists.txt  package.xml
ballistic_calculator/src/: ballistic_calculator_node.cpp
interfaces/: CMakeLists.txt  package.xml
interfaces/launch/: nodes.launch.py
interfaces/msg/: Armor.msg  Armor3D.msg  Armors.msg  Armors3D.msg
interfaces/srv/: SetMode.srv
pnp_solver/: CMakeLists.txt  package.xml
pnp_solver/config/: camera_info.yaml
pnp_solver/include/: _camera_info.hpp
pnp_solver/src/: pnp_solver_node.cpp
视觉/: CMakeLists.txt  conduction.cpp  conduction.hpp  config.hpp  main.cpp  pnp_result.hpp
视觉/cmake_file/: CMakeLists.txt
视觉/config/: path.json  video_config_1.json
